--- a/printer/templates/index.html
+++ b/printer/templates/index.html
@@ -1,29 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>Printer Sabeb</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="position-absolute top-50 start-50 translate-middle">
-        <h1 class="text-center">Printer Sabeb</h1>
-        <h4 class="text-center">Printer : {{printer}}</h4>
 
-        <form action="{% url 'printer:index' %}" method="POST" class="mt-4" enctype="multipart/form-data">
-          {% csrf_token %}
-          {{ form }}
-          <div class="d-grid gap-2 col-6 mx-auto mt-4">
-            <button type="submit" class="btn-lg btn-primary">Print</button>
-          </div>
-        </form>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <title>Printer Sabeb</title>
+</head>
 
-      </div>
+<body>
+  <div class="container">
+    <div class="position-absolute top-50 start-50 translate-middle">
+      <h1 class="text-center">Printer Sabeb</h1>
+      <h4 class="text-center">Printer : {{printer}}</h4>
+
+      <form action="{% url 'printer:index' %}" method="POST" class="mt-4" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.file }}
+        Color Mode: {{ form.color }}
+        Print Quality: {{ form.printQuality }}
+        Page Size: {{ form.pageSize }}
+        <div class="d-grid gap-2 col-6 mx-auto mt-4">
+          <button type="submit" class="btn-lg btn-primary">Print</button>
+        </div>
+      </form>
+
     </div>
+  </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
